--- a/HangmanAssignment/HangmanGamePage.xaml
+++ b/HangmanAssignment/HangmanGamePage.xaml
@@ -2,11 +2,13 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="HangmanAssignment.HangmanGamePage"
+             xmlns:vm ="clr-namespace:HangmanAssignment.ViewModels"
+             x:DataType="vm:GameLogic"
              Title="MAUI Hangman Assignment">
     <VerticalStackLayout>
         <Label Text="Welcome to Hangman" HorizontalTextAlignment="Center" HorizontalOptions="Center" FontAttributes="Bold"  FontSize="40"/>
-        <Image Margin="40" Source="hang1.png" HorizontalOptions="Center"/>
-        <Label FontAttributes="Bold" FontSize="30" HorizontalOptions="Center" Margin="40" Text="C_RR_EN__G_UE_S"/>
+        <Image Margin="40" Source="{Binding Tries[5] }" HorizontalOptions="Center"/>
+        <Label FontAttributes="Bold" FontSize="30" HorizontalOptions="Center" Margin="40"  x:Name="word"/>
         <Entry FontSize="30" HorizontalOptions="Center" Margin="40" Placeholder="Enter your next guess"/>
         <Button Text="Guess"/>
     </VerticalStackLayout>
