--- a/HangmanAssignment/HangmanGamePage.xaml
+++ b/HangmanAssignment/HangmanGamePage.xaml
@@ -3,13 +3,19 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="HangmanAssignment.HangmanGamePage"
              xmlns:vm ="clr-namespace:HangmanAssignment.ViewModels"
+             
              x:DataType="vm:GameLogic"
              Title="MAUI Hangman Assignment">
     <VerticalStackLayout>
         <Label Text="Welcome to Hangman" HorizontalTextAlignment="Center" HorizontalOptions="Center" FontAttributes="Bold"  FontSize="40"/>
-        <Image Margin="40" Source="{Binding Tries[5] }" HorizontalOptions="Center"/>
+       
+                    
+                
+            
+                    <Image Margin="40" Source="hang1.png" HorizontalOptions="Center"  />
+                
         <Label FontAttributes="Bold" FontSize="30" HorizontalOptions="Center" Margin="40"  x:Name="word"/>
         <Entry FontSize="30" HorizontalOptions="Center" Margin="40" Placeholder="Enter your next guess"/>
-        <Button Text="Guess"/>
+        <Button Text="Guess" BackgroundColor="Coral"/>
     </VerticalStackLayout>
 </ContentPage>
