--- a/HangmanAssignment/HangmanGamePage.xaml
+++ b/HangmanAssignment/HangmanGamePage.xaml
@@ -14,7 +14,7 @@
             
                     <Image Margin="40" Source="hang1.png" HorizontalOptions="Center"  />
                 
-        <Label FontAttributes="Bold" FontSize="30" HorizontalOptions="Center" Margin="40"  x:Name="word"/>
+        <Label FontAttributes="Bold" FontSize="30" HorizontalOptions="Center" Margin="40" Text="{Binding SecretWord}"  x:Name="word"/>
         <Entry FontSize="30" HorizontalOptions="Center" Margin="40" Placeholder="Enter your next guess"/>
         <Button Text="Guess" BackgroundColor="Coral"/>
     </VerticalStackLayout>
