modefied the view model  by making  the  hangman making

--- a/HangmanAssignment/HangmanGamePage.xaml
+++ b/HangmanAssignment/HangmanGamePage.xaml
@@ -12,10 +12,10 @@
                     
                 
             
-                    <Image Margin="40" Source="{Binding ImagePositon.Image}" HorizontalOptions="Center"  />
+        <Image Margin="40" Source="{Binding ImagePosition.Image}" HorizontalOptions="Center"  />
                 
-        <Label FontAttributes="Bold" FontSize="30" HorizontalOptions="Center" Margin="40" Text="{Binding SecretWord}"  x:Name="word"/>
+        <Label FontAttributes="Bold" FontSize="30" HorizontalOptions="Center" Margin="40" Text="{Binding SecretWord}"  />
         <Entry FontSize="30" HorizontalOptions="Center" Margin="40" Text="{Binding UserGuess}" Placeholder="Enter your next guess"/>
-        <Button Text="Guess" BackgroundColor="Coral" Command="{Binding PlayCommand}"/>
+        <Button Text="Guess" BackgroundColor="{StaticResource Primary}" Command="{Binding PlayCommand}"/>
     </VerticalStackLayout>
 </ContentPage>
