--- a/HangmanAssignment/HangmanGamePage.xaml
+++ b/HangmanAssignment/HangmanGamePage.xaml
@@ -14,8 +14,9 @@
             
         <Image Margin="40" Source="{Binding ImagePosition.Image}" HorizontalOptions="Center"  />
                 
+        <Label FontAttributes="Bold" FontSize="30" HorizontalOptions="Center" Margin="40"  Text="{Binding SelectedQuestion.Quiz}" />
         <Label FontAttributes="Bold" FontSize="30" HorizontalOptions="Center" Margin="40" Text="{Binding SecretWord}"  />
         <Entry FontSize="30" HorizontalOptions="Center" Margin="40" Text="{Binding UserGuess}" Placeholder="Enter your next guess"/>
         <Button Text="Guess" BackgroundColor="{StaticResource Primary}" Command="{Binding PlayCommand}"/>
     </VerticalStackLayout>
-</ContentPage>
+</ContentPage>                                                                                
